# pokemon_intelligent_pokedex

./: .flake8  .gitignore  README.md  config.py  csv_pokemon.py  data_importer.py  docker_compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/chatmodes/: Professor.chatmode.md
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pokedex.db
backend/api/: ask_routes.py  pokemon_routes.py
backend/app/: ai_assistant.py  crud.py  data_importer.py  database.py  db.py  init_db.py  llm.py  main.py  models.py  rag.py  schemas.py
backend/app/rag/: build.py  faiss.py  query.py  rag.py
backend/core/: config.py  llm.py
backend/data/: pokemon.csv
backend/database/: db.py  init_db.py  loader.py  models.py  schemas.py
backend/services/: ask_service.py  pokemon_service.py
backend/utils/: bulbapedia.py  description_parser.py  faiss.py
cache/: generation_6.json  species_1.json  species_10.json  species_11.json  species_12.json  species_2.json  species_24.json  species_25.json  species_26.json  species_27.json  species_28.json  species_29.json  species_3.json  species_4.json  species_5.json  species_6.json  species_7.json  species_8.json  species_9.json
frontend/: ask.html  index.html  package-lock.json  package.json  script.js  style.css  tailwind.config.js
frontend/src/: App.jsx  Main.jsx
frontend/src/assets/: index.css
frontend/src/pages/: AskPage.jsx  HomePage.jsx  PokedexPage.jsx
tests/: conftest.py
tests/integration/: test_ask_routes.py
tests/unit/: test_ask_service.py
